fix vertical align bug

--- a/css/site.styl
+++ b/css/site.styl
@@ -110,6 +110,7 @@ strong, b, .font-bold
 a,a:active,a:visited
   color:inherit
   text-decoration: none
+  vertical-align: top
   border-bottom: 1px solid $color-white-soft
 
 
